--- a/band.html
+++ b/band.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Band Members</title>
     <link rel="stylesheet" href="band.css">
 </head>
+
 <body id="body">
     <nav class="navegador">
         <div id="nav" class="nav">
             <div class="dropdown boton">
-                <button class="dropbtn"></button>
-                <h3>HESS LINKS</h3>
+                <button class="dropbtn" aria-label="dropdown button"></button>
+                <div class="h3">
+                    <h3>LINKS</h3>
+                </div>
                 <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
@@ -46,7 +50,7 @@
                     <li>● Emiliano Bracamonte – lead guitars (2023 – present)</li>
                 </ul>
             </div>
-    
+
             <div class="antiguos">
                 <h3>Former members</h3>
                 <ul>
@@ -65,9 +69,9 @@
                     <li>● Emiliano Bracamonte (lead guitars at Mvseo Rock in Buenos Aires, 2015)</li>
                 </ul>
             </div>
-    
 
-            </section>
+
+        </section>
     </article>
 
     <footer>
@@ -104,10 +108,13 @@
             <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
         </div>
 
-        <div class="home"><a href="#nav"><h3>. : Home : .</h3></a></div>
+        <div class="home"><a href="#nav">
+                <h3>. : Home : .</h3>
+            </a></div>
     </footer>
 
 
     <script src="code.js"></script>
 </body>
+
 </html>
