--- a/gallery.html
+++ b/gallery.html
@@ -12,9 +12,10 @@
     <nav class="navegador">
         <div id="nav" class="nav">
             <div class="dropdown boton">
-                <button class="dropbtn"></button>
-                <h3>HESS LINKS</h3>
-                <div class="dropdown-content">
+                <button class="dropbtn" aria-label="dropdown button"></button>
+                <div class="h3">
+                    <h3>LINKS</h3>
+                </div>                <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
@@ -40,62 +41,66 @@
     <article class="article-gallery">
         <section>
             <div class="caja-imgs" id="gallery">
-                <img src="gallery/hesscasa.webp" alt=" ">
-                <img src="gallery/hess2g11.webp" alt=" ">
-                <img src="gallery/dariog11.webp" alt=" ">
-                <img src="gallery/bracag11.webp" alt=" ">
-                <img src="gallery/arig11.webp" alt=" ">
-                <img src="gallery/ericg11.webp" alt=" ">
-                <img src="gallery/melg11.webp" alt=" ">
-                <img src="gallery/hessg11.webp" alt=" ">
-                <img src="gallery/riot.webp" alt=" ">
-                <img src="gallery/caught.webp" alt=" ">
-                <img src="gallery/braca.webp" alt=" ">
-                <img src="gallery/aeon.webp" alt=" ">
-                <img src="gallery/melanieyes.webp" alt=" ">
-                <img src="gallery/dariodrummer.webp" alt=" ">
-                <img src="gallery/arielatlas.webp" alt=" ">
-                <img src="gallery/remera.webp" alt=" ">
-                <img src="gallery/arieldiego.webp" alt=" ">
-                <img src="gallery/hessstudio.webp" alt=" ">
-                <img src="gallery/melanired.webp" alt=" ">
-                <img src="gallery/arielyoung.webp" alt=" ">
-                <img src="gallery/darioia.webp" alt=" ">
-                <img src="gallery/diegoia.webp" alt=" ">
-                <img src="gallery/ericia.webp" alt=" ">
-                <img src="gallery/arielia.webp" alt=" ">
-                <img src="gallery/arimelani.webp" alt=" ">
-                <img src="gallery/bassist.webp" alt=" ">
-                <img src="gallery/melani1.webp" alt=" ">
-                <img src="gallery/beto.webp" alt=" ">
-                <img src="gallery/ericbass.webp" alt=" ">
-                <img src="gallery/dario.webp" alt=" ">
-                <img src="gallery/diego.webp" alt=" ">
-                <img src="gallery/discografia.webp" al t=" ">
-                <img src="gallery/drummerd.webp" alt=" ">
-                <img src="gallery/ensayohess.webp" alt=" ">
-                <img src="gallery/eric1.webp" alt=" ">
-                <img src="gallery/ericatlas.webp" alt=" ">
-                <img src="gallery/german.webp" alt=" ">
-                <img src="gallery/germanmelani.webp" alt=" ">
-                <img src="gallery/hagalaz.webp" alt=" ">
-                <img src="gallery/harpokrates.webp" alt=" ">
-                <img src="gallery/hernan.webp" alt=" ">
-                <img src="gallery/hessanimal.webp" alt=" ">
-                <img src="gallery/ericgitar.webp" alt=" ">
-                <img src="gallery/hessatlas.webp" alt=" ">
-                <img src="gallery/hesshome.webp" alt=" ">
-                <img src="gallery/hucho.webp" alt=" ">
-                <img src="gallery/llavero.webp" alt=" ">
-                <img src="gallery/lordhess.webp" alt=" ">
-                <img src="gallery/ericgalpo.webp" alt=" ">
-                <img src="gallery/marito.webp" alt=" ">
-                <img src="gallery/drummer.webp" alt=" ">
-                <img src="gallery/mati.webp" alt=" ">
-                <img src="gallery/melani.webp" alt=" ">
-                <img src="gallery/diegoanimal.webp" alt=" ">
-                <img src="gallery/ariels.webp" alt=" ">
-                <img src="gallery/ruleta.webp" alt=" ">
+                <img src="gallery/hesscasa.webp" alt="Integrantes de HESS">
+                <img src="gallery/hess2g11.webp" alt="Integrantes de HESS en vivo">
+                <img src="gallery/melaniyeric.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/dariog11.webp" alt="Baterista Dario Dorigo">
+                <img src="gallery/bracag11.webp" alt="Guitarra lider Emiliano Bracamonte ">
+                <img src="gallery/ericyari.webp" alt="Eric Knudsen y Ariel Scheffer ">
+                <img src="gallery/arig11.webp" alt="Guitarra Ariel Scheffer">
+                <img src="gallery/ericg11.webp" alt="Bajista Eric Knudsen ">
+                <img src="gallery/melg11.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/hessg11.webp" alt="Integrantes de HESS posando">
+                <img src="gallery/riot.webp" alt="HESS + RIOT CITY">
+                <img src="gallery/caught.webp" alt="tapa caught somewhere in time">
+                <img src="gallery/braca.webp" alt="Guitarra lider Emiliano Bracamonte ">
+                <img src="gallery/aeon.webp" alt="Aeon disc">
+                <img src="gallery/melanieyes.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/dariodrummer.webp" alt="Baterista Dario Dorigo ">
+                <img src="gallery/arielatlas.webp" alt="Guitarra Ariel Scheffer ">
+                <img src="gallery/remera.webp" alt="Remera HESS Heavy Metal">
+                <img src="gallery/arieldiego.webp" alt="Guitarra Ariel Scheffer y diego schmidhalter ">
+                <img src="gallery/hessstudio.webp" alt="Integrantes de HESS en estudio">
+                <img src="gallery/melanired.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/arielyoung.webp" alt="Guitarra Ariel Scheffer ">
+                <img src="gallery/darioia.webp" alt="Baterista Dario Dorigo ">
+                <img src="gallery/diegoia.webp" alt="Diego schmidhalter creado con IA ">
+                <img src="gallery/ericia.webp" alt="Bajista Eric Knudsen creado con IA ">
+                <img src="gallery/arielia.webp" alt="Guitarra Ariel Scheffer creado con IA ">
+                <img src="gallery/arimelani.webp" alt="Guitarra Ariel Scheffer y Melani Hess ">
+                <img src="gallery/BracaQSR.webp" alt="Guitarra lider Emiliano Bracamonte ">
+                <img src="gallery/bassist.webp" alt="Bajista Eric Knudsen ">
+                <img src="gallery/melani1.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/beto.webp" alt="Beto Vazquez ">
+                <img src="gallery/ericbass.webp" alt="Bajista Eric Knudsen ">
+                <img src="gallery/dario.webp" alt="Baterista Dario Dorigo">
+                <img src="gallery/diego.webp" alt="diego schmidhalter ">
+                <img src="gallery/discografia.webp" alt="diacografia HESS ">
+                <img src="gallery/drummerd.webp" alt="Baterista Dario Dorigo ">
+                <img src="gallery/ensayohess.webp" alt="Integrantes de HESS en ensayo">
+                <img src="gallery/eric1.webp" alt="Bajista Eric Knudsen ">
+                <img src="gallery/ericatlas.webp" alt="Bajista Eric Knudsen ">
+                <img src="gallery/german.webp" alt="Productor German Delgado">
+                <img src="gallery/germanmelani.webp" alt="Cantante Melani Hess y german delgado ">
+                <img src="gallery/hagalaz.webp" alt="hagalaz disc ">
+                <img src="gallery/harpokrates.webp" alt="harpokrates disc ">
+                <img src="gallery/hernan.webp" alt="hernan dalmaso ">
+                <img src="gallery/hessanimal.webp" alt="Integrantes de HESS en vivo 2019">
+                <img src="gallery/ericgitar.webp" alt="Bajista Eric Knudsen con guitarra ">
+                <img src="gallery/hessatlas.webp" alt="Integrantes de HESS en vivo teatro Atlas">
+                <img src="gallery/hesshome.webp" alt="Integrantes de HESS en casa">
+                <img src="gallery/hucho.webp" alt="hucho Scheffer">
+                <img src="gallery/melaniunder.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/llavero.webp" alt=" Llavero de HESS">
+                <img src="gallery/lordhess.webp" alt="HESS + LORD DIVINE">
+                <img src="gallery/ericgalpo.webp" alt="Bajista Eric Knudsen ">
+                <img src="gallery/marito.webp" alt="Mario brunetti">
+                <img src="gallery/drummer.webp" alt="Baterista Dario Dorigo ">
+                <img src="gallery/mati.webp" alt="Matias Scheffer ">
+                <img src="gallery/melani.webp" alt="Cantante Melani Hess ">
+                <img src="gallery/diegoanimal.webp" alt="Diego schmidhalter ">
+                <img src="gallery/ariels.webp" alt="Guitarra Ariel Scheffer ">
+                <img src="gallery/ruleta.webp" alt="Integrantes de HESS foto ruleta">
                 
             </div>
         </section>
