--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <nav class="navegador">
         <div id="nav" class="nav">
             <div class="dropdown boton">
-                <button class="dropbtn"></button>
-                <h3>HESS LINKS</h3>
+                <button class="dropbtn" aria-label="dropdown button"></button>
+                <div class="h3">
+                    <h3>LINKS</h3>
+                </div>
                 <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
@@ -105,6 +107,20 @@
             </div>
 
             <div class="cartas">
+                <h2>Darío Dorigo</h2>
+                <div class="img-cartas">
+                    <img src="assets/darioperacion.webp" alt="">
+                </div>
+                <p>We want to announce that the surgery performed on our drummer Darío Dorigo was successful. 🤘
+                    <br>
+                    ---------
+                    <br>
+                    Queremos anunciarles que la cirugía que le hicieron a nuestro baterista Darío Dorigo salió exitosa.
+                    🤘
+                </p>
+            </div>
+
+            <div class="cartas">
                 <h2>New Lead Guitar</h2>
                 <div class="img-cartas">
                     <img src="assets/braca.webp" alt="">
@@ -145,20 +161,25 @@
                     <img src="assets/aeon.webp" alt="">
                 </div>
                 <p>EP COMING OUT 27th NOVEMBER ON ALL DIGITAL PLATFORMS
-                    Aeon Of Ma'at [Part 1] is the first one in a series of three 3-song EPs which will then be compiled in
-                    one LP to be called Heka. God of Gods. Creator of all that was, is, and will be. We are by his breath.
+                    Aeon Of Ma'at [Part 1] is the first one in a series of three 3-song EPs which will then be compiled
+                    in
+                    one LP to be called Heka. God of Gods. Creator of all that was, is, and will be. We are by his
+                    breath.
                     We do not go to him but it is he who comes.
                     Stay tuned for its release!
                     <br>
                     ---------
                     <br>
                     LANZAMIENTO DE EP EL 27 DE NOVIEMBRE EN TODAS LAS PLATAFORMAS DIGITALES
-                    Aeon Of Ma'at [Part 1] es el primero de una serie de tres EPs con tres temas cada uno, los cuales serán
-                    parte del futuro LP que se llamará Heka. Dios de Dioses. Creador de todo lo que fue, es y será. Nacemos
+                    Aeon Of Ma'at [Part 1] es el primero de una serie de tres EPs con tres temas cada uno, los cuales
+                    serán
+                    parte del futuro LP que se llamará Heka. Dios de Dioses. Creador de todo lo que fue, es y será.
+                    Nacemos
                     de su aliento. No vamos a él, sino que es él quien viene.
-                    ¡Atentos al lanzamiento!</p>
+                    ¡Atentos al lanzamiento!
+                </p>
             </div>
-        
+
             <div class="cartas">
                 <h2>NEW DRUMMER</h2>
                 <div class="img-cartas">
@@ -168,9 +189,10 @@
                     welcome.Cheers, Hessians!🤘
                     <br>
                     ---------
-                    <br>    
+                    <br>
                     Nos alegra anunciar a nuestro nuevo batero, Darío Dorigo!Démosle una
-                    cálida bienvenida de metal.¡Saludos, hessianos! 🤘</p>
+                    cálida bienvenida de metal.¡Saludos, hessianos! 🤘
+                </p>
             </div>
 
             <div class="cartas">
@@ -180,7 +202,9 @@
                 </div>
                 <p>Caught Somewhere In Time Iron Maiden Cover by HESS To be included in the upcoming album South
                     American Tribute to Iron Maiden by Rotten Flesh Records Mixing and mastering bye Germán Delgado.
-                    <a href="https://www.youtube.com/watch?v=qjgzb3E5A1Q&ab_channel=HESSHeavyMetal" target="_blank">👉Here</a></p>
+                    <a href="https://www.youtube.com/watch?v=qjgzb3E5A1Q&ab_channel=HESSHeavyMetal"
+                        target="_blank">👉Here</a>
+                </p>
             </div>
 
             <div class="cartas">
@@ -249,7 +273,9 @@
             <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
         </div>
 
-        <div class="home"><a href="#nav"><h3>. : Home : .</h3></a></div>
+        <div class="home"><a href="#nav">
+                <h3>. : Home : .</h3>
+            </a></div>
 
     </footer>
 
