--- a/videos.html
+++ b/videos.html
@@ -10,9 +10,10 @@
     <nav class="navegador">
         <div id="nav" class="nav">
             <div class="dropdown boton">
-                <button class="dropbtn"></button>
-                <h3>HESS LINKS</h3>
-                <div class="dropdown-content">
+                <button class="dropbtn" aria-label="dropdown button"></button>
+                <div class="h3">
+                    <h3>LINKS</h3>
+                </div>                <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
