sector videos completado

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="cartas-aside">
             <h2>ODISSEA + HESS + SILVERHEART</h2>
             <div class="img-cartas">
-                <img src="assets/hessg112.webp" alt="">
+                <a href="shows.html"><img src="assets/hessg112.webp" alt=""></a>
             </div>
             <p>01-06-24</p>
             <p>El sábado 01 de junio del 2024 estuvimos presentes en el famoso "GALPÓN DE LA MÚSICA"
@@ -57,7 +57,7 @@
         <div class="cartas-aside">
             <h2>HESS-INNERFORCE-UNDER THE SILENCE</h2>
             <div class="img-cartas">
-                <img src="assets//hessquesearock.webp" alt="">
+                <a href="shows.html"><img src="assets//hessquesearock.webp" alt=""></a>
             </div>
             <p>27-04-2024</p>
             <p>Queremos anunciarles que el sábado 27 de abril del 2024 vienen los chicos de INNERFORCE desde Bs As a
@@ -68,7 +68,7 @@
         <div class="cartas-aside">
             <h2>RIOT CITY - HESS</h2>
             <div class="img-cartas">
-                <img src="assets//riot.webp" alt="">
+                <a href="shows.html"><img src="assets//riot.webp" alt=""></a>
             </div>
             <p>29-12-23</p>
             <p>Nos enorgullece anunciar que seremos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
@@ -78,7 +78,7 @@
         <div class="cartas-aside">
             <h2>Claudio TANO Marciello</h2>
             <div class="img-cartas">
-                <img src="assets//tano.webp" alt="">
+                <a href="shows.html"> <img src="assets//tano.webp" alt=""></a>
             </div>
             <p>01-12-23</p>
             <p>Noche inolvidable compartiendo fecha con el gran Claudio Tano Marciello
@@ -88,7 +88,7 @@
         <div class="cartas-aside">
             <h2>HESS + LORD DIVINE</h2>
             <div class="img-cartas">
-                <img src="assets//hess-lord.webp" alt="">
+                <a href="shows.html"><img src="assets//hess-lord.webp" alt=""></a>
             </div>
             <p>05-05-23</p>
             <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!!
@@ -265,12 +265,12 @@
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Twitter"
+            <!-- <a target="_blank" title="Twitter"
                 href="https://twitter.com/i/flow/login?redirect_after_login=%2Fhessheavymetal"><img
-                    src="icons/twitter.webp" class="iconos" alt="..."></a>
+                    src="icons/twitter.webp" class="iconos" alt="..."></a> -->
             <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
+            <!-- <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a> -->
         </div>
 
         <div class="home"><a href="#nav">
