--- a/interviews.html
+++ b/interviews.html
@@ -31,8 +31,10 @@
             </div>
         </div>
     </nav>
+<div class="hess">
+    <h1 class="">INTERVIEWS</h1>
 
-    <h1 class="interviews-h1">INTERVIEWS</h1>
+</div>
     <article class="article">
         <section>
             <div class="interviews-cards">
@@ -149,12 +151,12 @@
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Twitter"
+            <!-- <a target="_blank" title="Twitter"
                 href="https://twitter.com/i/flow/login?redirect_after_login=%2Fhessheavymetal"><img
-                    src="icons/twitter.webp" class="iconos" alt="..."></a>
+                    src="icons/twitter.webp" class="iconos" alt="..."></a> -->
             <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
+            <!-- <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a> -->
         </div>
         <div class="home"><a href="#nav"><h3>. : Home : .</h3></a></div>
     </footer>
