--- a/melanihess.html
+++ b/melanihess.html
@@ -15,7 +15,8 @@
                 <button class="dropbtn" aria-label="dropdown button"></button>
                 <div class="h3">
                     <h3>LINKS</h3>
-                </div>                <div class="dropdown-content">
+                </div>
+                <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
@@ -35,18 +36,21 @@
     <aside class="mel-aside">
 
     </aside>
+    <div class="hess">
 
+        <h1>Melani Hess</h1>
+    </div>
 
     <article>
         <section>
             <div class="carta-melani-hess">
-                <h1>Melani Hess</h1>
                 <img src="assets/melanihess.webp" alt="">
             </div>
 
             <div class="melani-info">
                 <p><b>Melani Hess</b> is a singer from Rosario, Argentina. Currently, she is part of heavy metal bands
-                    HESS and Beto Vazquez Infinity. She also takes part in an international project called DIO Knights, tribute to
+                    HESS and Beto Vazquez Infinity. She also takes part in an international project called DIO Knights,
+                    tribute to
                     Ronnie James Dio. </p>
             </div>
 
@@ -90,7 +94,8 @@
 
             <div class="melani-info">
                 <p><b>Melani Hess</b> es una cantante de Rosario, Argentina. En la actualidad, integra las bandas de
-                    heavy metal HESS y Beto Vazquez Infinity. También forma parte del proyecto internacional DIO Knights, tributo a
+                    heavy metal HESS y Beto Vazquez Infinity. También forma parte del proyecto internacional DIO
+                    Knights, tributo a
                     Ronnie James Dio.</p>
             </div>
 
@@ -209,15 +214,17 @@
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Twitter"
+            <!-- <a target="_blank" title="Twitter"
                 href="https://twitter.com/i/flow/login?redirect_after_login=%2Fhessheavymetal"><img
-                    src="icons/twitter.webp" class="iconos" alt="..."></a>
+                    src="icons/twitter.webp" class="iconos" alt="..."></a> -->
             <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
+            <!-- <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a> -->
         </div>
 
-        <div class="home"><a href="#nav"><h3>. : Home : .</h3></a></div>
+        <div class="home"><a href="#nav">
+                <h3>. : Home : .</h3>
+            </a></div>
     </footer>
 
 
