--- a/music.html
+++ b/music.html
@@ -43,7 +43,7 @@
 
     <div class="play">
         <div id="audio-container">
-            <div class="hess hess-music">
+            <div class="hess">
                 <h1>MUSIC</h1>
             </div>
             
@@ -77,7 +77,7 @@
             <div class="carta-audio singles">
                 <h2>Singles</h2>
                 <div class="music-img">
-                    <img src="assets/sailor.webp" alt="">
+                    <img src="assets/sailorcross.webp" alt="">
                 </div>
                 <ul id="playlist-sailor"></ul>
                 <p>Click song to play</p>
@@ -133,12 +133,12 @@
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Twitter"
+            <!-- <a target="_blank" title="Twitter"
                 href="https://twitter.com/i/flow/login?redirect_after_login=%2Fhessheavymetal"><img
-                    src="icons/twitter.webp" class="iconos" alt="..."></a>
+                    src="icons/twitter.webp" class="iconos" alt="..."></a> -->
             <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
+            <!-- <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a> -->
         </div>
         <div class="home"><a href="#nav">
                 <h3>Go home</h3>
