--- a/lyrics.html
+++ b/lyrics.html
@@ -32,9 +32,11 @@
         </div>
     </nav>
 
+    <div class="hess">
+        <h1 class="">LYRICS</h1>
+    </div>
     <article>
         <section class="section-lyrics">
-            <h1 class="hess-lyrics">LYRICS</h1>
 
             <div class="king">
                 <div class="english-lyrics">
@@ -1034,12 +1036,12 @@
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Twitter"
+            <!-- <a target="_blank" title="Twitter"
                 href="https://twitter.com/i/flow/login?redirect_after_login=%2Fhessheavymetal"><img
-                    src="icons/twitter.webp" class="iconos" alt="..."></a>
+                    src="icons/twitter.webp" class="iconos" alt="..."></a> -->
             <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
+            <!-- <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a> -->
         </div>
         <div class="home"><a href="#nav">
                 <h3>. : Home : .</h3>
