--- a/music.html
+++ b/music.html
@@ -32,6 +32,73 @@
         </div>
     </nav>
 
+    <aside class="aside">
+        <div class="aside-title">
+            <h2><a href="shows.html">LATEST SHOWS</a></h2>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>ODISSEA + HESS + SILVERHEART</h2>
+            <div class="img-cartas">
+                <a href="shows.html"><img src="assets/hessg112.webp" alt=""></a>
+            </div>
+            <p>01-06-24</p>
+            <p>El sábado 01 de junio del 2024 estuvimos presentes en el famoso "GALPÓN DE LA MÚSICA"
+                en Rosario junto a ODDISEA y a SILVERHEART que presentaba su nuevo material.</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>HESS-INNERFORCE-UNDER THE SILENCE</h2>
+            <div class="img-cartas">
+                <a href="shows.html"><img src="assets//hessquesearock.webp" alt=""></a>
+            </div>
+            <p>27-04-2024</p>
+            <p>Queremos anunciarles que el sábado 27 de abril del 2024 vienen los chicos de INNERFORCE desde Bs As a
+                compartir escenario con nosotros, donde también se harán presentes los chicos de UNDER THE SILENCE
+                en el bar QUE SEA ROCK - Rosario</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>RIOT CITY - HESS</h2>
+            <div class="img-cartas">
+                <a href="shows.html"><img src="assets//riot.webp" alt=""></a>
+            </div>
+            <p>29-12-23</p>
+            <p>Nos enorgullece anunciar que seremos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
+                diciembre del 2023 en el Club Cultural BULA - Bs As..</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>Claudio TANO Marciello</h2>
+            <div class="img-cartas">
+                <a href="shows.html"> <img src="assets//tano.webp" alt=""></a>
+            </div>
+            <p>01-12-23</p>
+            <p>Noche inolvidable compartiendo fecha con el gran Claudio Tano Marciello
+            </p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>HESS + LORD DIVINE</h2>
+            <div class="img-cartas">
+                <a href="shows.html"><img src="assets//hess-lord.webp" alt=""></a>
+            </div>
+            <p>05-05-23</p>
+            <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!!
+                HESS junto a LORD DIVINE en Rosario!
+                Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>SCAN ME</h2>
+            <div class="img-cartas">
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+            </div>
+            <p>Follow us to find out all the news.</p>
+            <p>Síguenos para enterarte de todas las novedades.</p>
+        </div>
+    </aside>
+
     <!-- <div class="musica">
         <iframe style="border-radius:12px"
             src="https://open.spotify.com/embed/artist/5r3GytWIwcRavZ0uF3tCWn?utm_source=generator" width="100%"
@@ -65,6 +132,16 @@
                 <p>Click song to play</p>
             </div>
 
+            
+            <div class="carta-audio singles">
+                <h2>Singles</h2>
+                <div class="music-img">
+                    <img src="assets/sailorcross.webp" alt="">
+                </div>
+                <ul id="playlist-sailor"></ul>
+                <p>Click song to play</p>
+            </div>
+
             <div class="carta-audio harpokrates">
                 <h2>2019 - Harpokrates - LP</h2>
                 <div class="music-img">
@@ -74,15 +151,6 @@
                 <p>Click song to play</p>
             </div>
 
-            <div class="carta-audio singles">
-                <h2>Singles</h2>
-                <div class="music-img">
-                    <img src="assets/sailorcross.webp" alt="">
-                </div>
-                <ul id="playlist-sailor"></ul>
-                <p>Click song to play</p>
-            </div>
-            
             <div class="carta-audio hagalaz">
                 <h2>2014 - Hagalaz - LP</h2>
                 <div class="music-img">
