--- a/band.html
+++ b/band.html
@@ -33,9 +33,39 @@
         </div>
     </nav>
 
+    <aside class="aside">
+        <div class="aside-title">
+            <h2><a href="shows.html">PLAY HESS</a></h2>
+        </div>
+
+        <div class="cartas-aside">
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/artist/5r3GytWIwcRavZ0uF3tCWn?utm_source=generator&theme=0"
+                width="100%" height="400" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </div>
+
+        <div class="cartas-aside">
+            <iframe style="border-radius: 12px;" width="100%" height="400"
+                src="https://www.youtube.com/embed/videoseries?si=XK1GT5o7yQycwol9&amp;list=PLs2eH75Nkkef-L6mWDVjKcEiJ69Td4m7M"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>SCAN ME</h2>
+            <div class="img-cartas">
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+            </div>
+            <p>Follow us to find out all the news.</p>
+            <p>Síguenos para enterarte de todas las novedades.</p>
+        </div>
+    </aside>
+
     <div class="hess">
         <h1>Band Members</h1>
-
     </div>
     <article>
         <section>
@@ -52,6 +82,27 @@
                     <li>● Eric Knudsen – bass (2017 – present)</li>
                     <li>● Emiliano Bracamonte – lead guitars (2023 – present)</li>
                 </ul>
+                <div class="bandmembers">
+                    <div class="bandIMG">
+                        <a href="gallery.html"><img src="gallery/melani.webp" alt="Melani Hess"></a>
+                    </div>
+
+                    <div class="bandIMG">
+                        <a href="gallery.html"><img src="gallery/arig11.webp" alt="Ariel Schefer"></a>
+                    </div>
+
+                    <div class="bandIMG">
+                        <a href="gallery.html"><img src="gallery/dariodrummer.webp" alt="Darío Dorigo"></a>
+                    </div>
+
+                    <div class="bandIMG">
+                        <a href="gallery.html"><img src="gallery/ericgalp.webp" alt="Eric Knudsen"></a>
+                    </div>
+
+                    <div class="bandIMG">
+                        <a href="gallery.html"><img src="gallery/BracaQSR.webp" alt="Emiliano Bracamonte"></a>
+                    </div>
+                </div>
             </div>
 
             <div class="antiguos">
@@ -72,12 +123,12 @@
                     <li>● Emiliano Bracamonte (lead guitars at Mvseo Rock in Buenos Aires, 2015)</li>
                 </ul>
             </div>
-
-
         </section>
+
     </article>
 
     <footer>
+
         <div class="copyright">
             <h2 class="ekm">Copyright - EK Metal - 2024</h2>
         </div>
