--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
                 HESS junto a LORD DIVINE en Rosario!
                 Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
         </div>
+
+        <div class="cartas-aside">
+            <h2>SCAN ME</h2>
+            <div class="img-cartas">
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+            </div>
+            <p>Follow us to find out all the news.</p>
+            <p>Síguenos para enterarte de todas las novedades.</p>
+        </div>
     </aside>
 
     <!-- ----- ARTICLE ----- -->
