--- a/melanihess.html
+++ b/melanihess.html
@@ -33,8 +33,27 @@
         </div>
     </nav>
 
-    <aside class="mel-aside">
+    <aside class="aside">
+        <div class="aside-title">
+            <h2><a href="shows.html">PLAY HESS</a></h2>
+        </div>
 
+        <div class="cartas-aside">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5r3GytWIwcRavZ0uF3tCWn?utm_source=generator&theme=0" width="100%" height="750" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+
+        <div class="cartas-aside">
+            <iframe style="border-radius: 12px;" width="100%" height="750" src="https://www.youtube.com/embed/videoseries?si=XK1GT5o7yQycwol9&amp;list=PLs2eH75Nkkef-L6mWDVjKcEiJ69Td4m7M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>SCAN ME</h2>
+            <div class="img-cartas">
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+            </div>
+            <p>Follow us to find out all the news.</p>
+            <p>Síguenos para enterarte de todas las novedades.</p>
+        </div>
     </aside>
     <div class="hess">
 
