--- a/lyrics.html
+++ b/lyrics.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lyrics</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="lyrics.css">
 </head>
 
@@ -163,7 +164,7 @@
                         Bajo una nube azul sus ojos destru<br>ían
                         Todo lo que veían<br>
                         <br>
-                        “Soy el 8° grito<br>
+                        “Soy el 8vo grito<br>
                         La Superalma de Ra<br>
                         Cruza el Tigris<br>
                         Ingresa al templo de Ishtar”<br>
