--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HESS Heavy Metal</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -99,7 +100,7 @@
         <div class="cartas-aside">
             <h2>SCAN ME</h2>
             <div class="img-cartas">
-                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la" target="_blank"><img src="assets/QR.webp" alt=""></a>
             </div>
             <p>Follow us to find out all the news.</p>
             <p>Síguenos para enterarte de todas las novedades.</p>
@@ -109,7 +110,7 @@
     <!-- ----- ARTICLE ----- -->
 
     <article>
-        <section>
+        <section class="index-section">
             <div class="hess">
                 <h1>HESS</h1>
                 <p>HESS is a Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p>
