--- a/melanihess.html
+++ b/melanihess.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melani Hess</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="melanihess.css">
 </head>
 
@@ -49,7 +50,7 @@
         <div class="cartas-aside">
             <h2>SCAN ME</h2>
             <div class="img-cartas">
-                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la" target="_blank"><img src="assets/QR.webp" alt=""></a>
             </div>
             <p>Follow us to find out all the news.</p>
             <p>Síguenos para enterarte de todas las novedades.</p>
@@ -203,8 +204,12 @@
         </section>
     </article>
 
-    <div class="play mel-player">
+    <!-- <div class="play mel-player">
         <div id="player"></div>
+    </div> -->
+
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2E77atw4m28?si=F59TG6ItSKHAQzcL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <footer>
