--- a/shows.html
+++ b/shows.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIVE SHOWS</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -49,7 +50,7 @@
         <div class="cartas-aside">
             <h2>SCAN ME</h2>
             <div class="img-cartas">
-                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img src="assets/QR.webp" alt=""></a>
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la" target="_blank"><img src="assets/QR.webp" alt=""></a>
             </div>
             <p>Follow us to find out all the news.</p>
             <p>Síguenos para enterarte de todas las novedades.</p>
