--- a/band.html
+++ b/band.html
@@ -58,7 +58,8 @@
         <div class="cartas-aside">
             <h2>SCAN ME</h2>
             <div class="img-cartas">
-                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la" target="_blank"><img src="assets/QR.webp" alt=""></a>
+                <a href="https://www.instagram.com/hessheavymetal/?hl=es-la" target="_blank"><img src="assets/QR.webp"
+                        alt=""></a>
             </div>
             <p>Follow us to find out all the news.</p>
             <p>Síguenos para enterarte de todas las novedades.</p>
@@ -131,7 +132,7 @@
     <footer>
 
         <div class="copyright">
-            <h2 class="ekm">Copyright - EK Metal - 2024</h2>
+            <h2 class="ekm">Created by - EK Metal - 2024</h2>
         </div>
 
         <div class="iconos">
