--- a/videos.html
+++ b/videos.html
@@ -87,7 +87,7 @@
 
     <footer>
         <div class="copyright">
-            <h2 class="ekm">Copyright - EK Metal - 2024</h2>
+            <h2 class="ekm">Created by - EK Metal - 2024</h2>
         </div>
 
         <div class="iconos">
