--- a/lyrics.html
+++ b/lyrics.html
@@ -1013,7 +1013,7 @@
 
     <footer>
         <div class="copyright">
-            <h2 class="ekm"></a>Copyright - EK Metal - 2024</h2>
+            <h2 class="ekm">Created by - EK Metal - 2024</h2>
         </div>
 
         <div class="iconos">
