--- a/shows.html
+++ b/shows.html
@@ -66,6 +66,33 @@
             </div>
 
             <div class="cartas">
+                <h2>FOXY VEGAS + DOMINATION + HESS</h2>
+                <div class="img-cartas">
+                    <img src="assets/Hess gualeguaychu.jpg" alt="">
+                </div>
+                <p>28-12-24</p>
+                <p>Hemos viajado a la hermosa ciudad de Gualeguaychú para compartir escenario con 2 bandas espectaculares, y hemos regresado a casa con nuevos amigos y colegas del metal.</p>
+            </div>
+
+            <div class="cartas">
+                <h2>HESS + LORD DIVINE + EL LEGADO</h2>
+                <div class="img-cartas">
+                    <img src="assets/HESS  - EL LEGADO.jpg" alt="">
+                </div>
+                <p>09-11-24</p>
+                <p>Un pequeño viaje hasta Villa Constitución para volver a rockear! Esta vez con los amigos de Lord Divine y la banda EL LEGADO de Javier Barroso.p>
+            </div>
+
+            <div class="cartas">
+                <h2>HESS + ULNEASH THE BEAST + FABIO LIONE</h2>
+                <div class="img-cartas">
+                    <img src="assets/HESS - Fabio Lione.jpg" alt="">
+                </div>
+                <p>20-11-24</p>
+                <p>Fue un verdadero honor para nosotros poder compartir escenario con el señon Fabio Lione.</p>
+            </div>
+
+            <div class="cartas">
                 <h2>ODISSEA + HESS + SILVERHEART</h2>
                 <div class="img-cartas">
                     <img src="assets/hessg112.webp" alt="">
